--- a/website.html
+++ b/website.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- Style Css -->
-    <link rel="stylesheet" href="./website.css" />
+    <link rel="stylesheet" href="./css/website.css" />
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -19,7 +19,7 @@
       <!-- ! Nav -->
       <nav>
         <div class="nav-left">
-          <img src="./FSPoster.svg" alt="Header Icon" />
+          <img src="./photo/FSPoster.svg" alt="Header Icon" />
           FS Poster
         </div>
         <div class="nav-right">
@@ -55,20 +55,20 @@
           <button class="btn-bg-white">watch video</button>
         </div>
         <div class="bacground-img">
-          <img src="./backgroundimg.jpg" alt="bacground-img" />
+          <img src="./photo/backgroundimg.jpg" alt="bacground-img" />
         </div>
       </header>
       <!-- ! Container Main -->
       <main>
         <div class="main-header">
-          <img src="./header-backgroundimg.svg" alt="icon" />
+          <img src="./photo/header-backgroundimg.svg" alt="icon" />
           <p>
             FS Poster gives you a great opportunity to auto-publish WordPress
             posts on the most popular social networks automatically. By making
             use of FS Poster you will also be able to schedule posts, re-publish
             previously created posts, and so on.
           </p>
-          <img src="./header-backgroundimg-right.svg" alt="icon" />
+          <img src="./photo/header-backgroundimg-right.svg" alt="icon" />
         </div>
         <!-- ! benefist -->
         <div class="benifest-container">
@@ -83,7 +83,7 @@
               </p>
             </div>
             <div class="top-right">
-              <img src="./img1.svg" alt="benifest" />
+              <img src="./photo/img1.svg" alt="benifest" />
             </div>
           </div>
           <div class="benefist-bottom">
@@ -240,41 +240,40 @@
           </div>
           <div class="box-bottom">
             <div class="box-bottom-left">
-              <img src="./featurestopleftimg.svg" alt="" />
+              <img src="./photo/featurestopleftimg.svg" alt="" />
             </div>
             <div class="box-bottom-right">
               <h4>Schedule posts</h4>
-            <p>
-              You can set dates, predetermined intervals, and filters to your
-              social media posts through scheduler plugin WordPress.
-            </p>
+              <p>
+                You can set dates, predetermined intervals, and filters to your
+                social media posts through scheduler plugin WordPress.
+              </p>
             </div>
           </div>
         </div>
         <div class="container-middle">
           <div class="container-middle-left">
             <h4>Direct share</h4>
-          <p>
-            Social media scheduling app allows you to share your
-            blogs, posts, and custom content without creating a WordPress post.
-          </p>
+            <p>
+              Social media scheduling app allows you to share your blogs, posts,
+              and custom content without creating a WordPress post.
+            </p>
           </div>
           <div class="container-middle-right">
-            <img src="./feqaturesmiddlerightimg.svg" alt="" />
+            <img src="./photo/feqaturesmiddlerightimg.svg" alt="" />
           </div>
         </div>
         <div class="featurecontainer-bottom">
           <div class="featurecontainer-bottom-left">
-            <img src="./featuresbottomleftimg.svg" alt="" />
+            <img src="./photo/featuresbottomleftimg.svg" alt="" />
           </div>
           <div class="featurecontainer-bottom-right">
             <h4>14 integrated social networks</h4>
-          <p>
-            Social media auto poster & scheduler
-            integrates with 13 social media networks and WordPress sites. You
-            can schedule an unlimited amount of content and auto post from
-            WordPress to social media.
-          </p>
+            <p>
+              Social media auto poster & scheduler integrates with 13 social
+              media networks and WordPress sites. You can schedule an unlimited
+              amount of content and auto post from WordPress to social media.
+            </p>
           </div>
         </div>
         <div class="featurecontainer-button">
@@ -298,22 +297,208 @@
           </div>
         </div>
         <div class="number-bottom">
-          <img src="./pinkcircle.svg" alt="">
-          <img src="./pinkcircle.svg" alt=""> 
-          <img src="./pinkcircle.svg" alt="">
+          <img src="./photo/pinkcircle.svg" alt="" />
+          <img src="./photo/pinkcircle.svg" alt="" />
+          <img src="./photo/pinkcircle.svg" alt="" />
         </div>
       </div>
       <!--!world class customer service-->
       <div class="box-world">
         <div class="box-world-top">
           <h3>Wold Class Customer Service</h3>
-          <p>You will be able to publish your WordPress posts with all features</p>
+          <p>
+            You will be able to publish your WordPress posts with all features
+          </p>
         </div>
         <div class="box-world-bottom">
-          <img src="./wroldmap.svg" alt="">
+          <img src="./photo/wroldmap.svg" alt="" />
+        </div>
+      </div>
+      <!--!end of the world map-->
+      <div class="customer-satisfy">
+        <div class="customer-satisfy-box1">
+          <h3>See How Well Our Customers Are Satisfied</h3>
+        </div>
+        <div class="customer-satisfy-box2">
+          <img src="./photo/arrow-left.png" alt="" />
+          <p>
+            If you are looking for community with dedicated focus to grow on UX
+            design, a designer or building your own agency, The Designership Pro
+            is the go to place. You will get support for everyone in the
+            community and personally Mizko will help to you grow and answer all
+            your questions.
+          </p>
+          <img src="./photo/arrow-right.png" alt="" />
+        </div>
+        <div class="customer-satisfy-box3">
+          <img src="./photo/personphoto.png" alt="" />
+          <h5>Ulvin Omarov</h5>
+          <p>For customer support</p>
+        </div>
+      </div>
+      <!--!beginnig to the blocks-->
+      <div class="box-block">
+        <div class="box-block-top">
+          <h3>Have A Look At Our Creative Blog</h3>
+          <a href="See all blogs">See all blogs</a>
+          <img src="./photo/blockarrow-right.svg" alt="" />
+        </div>
+        <div class="box-block-middle">
+          <div class="box1">
+            <img src="./photo/block1img.png" alt="" />
+            <h5>10 Effective Social Media Post Ideas For Small Businesses</h5>
+            <div class="box1-middle">
+              <p>Wordpress</p>
+              <p>June 15, 2021</p>
+            </div>
+          </div>
+          <div class="box2">
+            <img src="./photo/block2img.png" alt="" />
+            <h5>Time To Post On Tumblr In 2021</h5>
+            <div class="box2-middle">
+              <p>Wordpress</p>
+              <p>June 15, 2021</p>
+            </div>
+          </div>
+          <div class="box3">
+            <img src="./photo/block3img.png" alt="" />
+            <h5>
+              5 Useful Social Media Tools To Manage Your Posts Effectively
+            </h5>
+            <div class="box3-middle">
+              <p>Wordpress</p>
+              <p>June 15, 2021</p>
+            </div>
+          </div>
+        </div>
+        <div class="box-block-bottom">
+          <h4>Subscribe To Our Newsletter</h4>
+          <div class="box">
+            <input placeholder="Your email" type="email" />
+            <button>Subscribe</button>
+          </div>
+        </div>
+      </div>
+      <!--!frequently asked questions-->
+      <div class="container-question">
+        <div class="questiontop">
+          <h3>Frequently Asked Questions</h3>
+        </div>
+        <div class="questionbottom">
+          <div class="q1">
+            <h5>
+              I Have Some Difficulties Related To The Plugin. What Should I Do?
+            </h5>
+            <img src="./photo/plusimg.svg" alt="" />
+          </div>
+          <hr />
+          <div class="q2">
+            <h5>How Can I Move The Plugin To My New Domain?</h5>
+            <img src="./photo/plusimg.svg" alt="" />
+          </div>
+          <p>
+            1. Go to the FS Poster settings > General settings and disable the
+            License status option; <br />
+            2. And install the plugin on your new website. <br />
+            <br />
+
+            Note that we highly recommend exporting the plugin data in the
+            Export & Import settings before disabling the option.
+          </p>
+          <hr />
+          <div class="q3">
+            <h5>
+              I See “Published By FS Poster” On The Top Of My Facebook Posts.
+              How Can I Change It?
+            </h5>
+            <img src="./photo/plusimg.svg" alt="" />
+          </div>
+          <hr />
+          <div class="q4">
+            <h5>My Facebook Personal App Is Not Approved. What Can I Do?</h5>
+            <img src="./photo/plusimg.svg" alt="" />
+          </div>
+          <hr />
+          <div class="q5">
+            <h5>Can Other WordPress Users Use The Plugin?</h5>
+            <img src="./photo/plusimg.svg" alt="" />
+          </div>
+          <hr />
+          <div class="q6">
+            <h5>How Many Accounts Can I Add To The Plugin?</h5>
+            <img src="./photo/plusimg.svg" alt="" />
+          </div>
+          <hr />
+        </div>
+      </div>
+      <!--! dont wait, start now -->
+      <div class="lastpinkbox">
+        <div class="box-left">
+          <div class="box-left-top">
+            <h2>Don’t wait, start now!</h2>
+            <p>
+              Choose a style, use sections to build pages and lastly, add your
+              copy. It only takes a few clicks to get your site ready to go.
+            </p>
+          </div>
+          <div class="box-left-bottom">
+            <img src="./photo/pinkcircle.svg" alt="" />
+          </div>
+        </div>
+        <div class="box-right">
+          <button>Try demo</button>
+          <button>BUY NOW - $45</button>
+        </div>
+      </div>
+      <!--!end of the website-->
+      <div class="container-last">
+        <div class="container-main">
+          <div class="div1">
+            <div class="div1-top">
+              <img src="./photo/FSPoster.svg" alt="" />
+              <h4>FS Poster</h4>
+            </div>
+            <div class="div1-bottom">
+              <p>FS Poster - WordPress auto poster and scheduler plugin.</p>
+            </div>
+          </div>
+          <div class="div2">
+            <h5>Company</h5>
+            <nav>Home</nav>
+            <nav>Buy now</nav>
+            <nav>Blog</nav>
+            <nav>Demo</nav>
+            <nav>FAQ</nav>
+          </div>
+          <div class="div3">
+            <h5>Product</h5>
+            <nav>Refund</nav>
+            <nav>Documentation</nav>
+            <nav>Support</nav>
+            <nav>Video tutorials</nav>
+            <nav>Suggest a feature</nav>
+          </div>
+          <div class="div4">
+            <h5>Contact</h5>
+          <div class="div4-top">
+            <i class="fa-regular fa-envelope"></i>
+            <p>info@fs-poster.com</p>
+          </div>
+          <div class="div4-bottom">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-telegram"></i>
+            <i class="fa-brands fa-youtube"></i>
+          </div>
+          </div>
+        </div>
+        <div class="container-footer">
+          <img src="./photo/copyrightimg.png" alt="">
+          <p>FS Poster 2021. All Rights Reserved</p>
+          <p>Terms and Conditions</p>
+          <p>Privacy policy</p>
         </div>
       </div>
     </div>
   </body>
 </html>
-
